--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "pg-escape",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": "segmentio/pg-escape",
   "description": "escape postgres queries which do not support stored procedures",
-  "keywords": ["pg", "postgres", "escape", "query"],
+  "keywords": [
+    "pg",
+    "postgres",
+    "escape",
+    "query"
+  ],
   "dependencies": {},
   "devDependencies": {
     "mocha": "*",
