setup XRegExp as replacement for build in RegExp

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "escape",
     "query"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "xregexp": "^2.0.0"
+  },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
